--- a/assignment1.html
+++ b/assignment1.html
@@ -24,5 +24,12 @@
       If you don't know how to make the above mentioned tags, either take a look around on
       the internet, or don't hesitate to ask me!
     -->
+	<h1>Joji Bronner</h1>
+	
+	<ul>
+		<li>HTML</li>
+		<li>CSS</li>
+		<li>A little bit of Javascript</li>
+	</ul>
   </body>
 </html>
